; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_job.c_amdgpu_job_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_job.c_amdgpu_job_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_job = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @amdgpu_job_free(%struct.amdgpu_job* %0) #0 {
  %2 = alloca %struct.amdgpu_job*, align 8
  store %struct.amdgpu_job* %0, %struct.amdgpu_job** %2, align 8
  %3 = load %struct.amdgpu_job*, %struct.amdgpu_job** %2, align 8
  %4 = call i32 @amdgpu_job_free_resources(%struct.amdgpu_job* %3)
  %5 = load %struct.amdgpu_job*, %struct.amdgpu_job** %2, align 8
  %6 = getelementptr inbounds %struct.amdgpu_job, %struct.amdgpu_job* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @dma_fence_put(i32 %7)
  %9 = load %struct.amdgpu_job*, %struct.amdgpu_job** %2, align 8
  %10 = getelementptr inbounds %struct.amdgpu_job, %struct.amdgpu_job* %9, i32 0, i32 1
  %11 = call i32 @amdgpu_sync_free(i32* %10)
  %12 = load %struct.amdgpu_job*, %struct.amdgpu_job** %2, align 8
  %13 = getelementptr inbounds %struct.amdgpu_job, %struct.amdgpu_job* %12, i32 0, i32 0
  %14 = call i32 @amdgpu_sync_free(i32* %13)
  %15 = load %struct.amdgpu_job*, %struct.amdgpu_job** %2, align 8
  %16 = call i32 @kfree(%struct.amdgpu_job* %15)
  ret void
}

declare dso_local i32 @amdgpu_job_free_resources(%struct.amdgpu_job*) #1

declare dso_local i32 @dma_fence_put(i32) #1

declare dso_local i32 @amdgpu_sync_free(i32*) #1

declare dso_local i32 @kfree(%struct.amdgpu_job*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
